--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta chaset="utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 
     <title>JAVASCRIPT QUIZ!</title>
+    <!--JQUERY AND CSS INSERT-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+    <!--JUMOBOTRON-->
     <div class="jumbotron-1">
         <div class="container">
             <h1 class="display-1">Javascipt QuiZ!</h1>
@@ -25,6 +27,7 @@
     </div>
     <br>
     <div class='container'>
+        <!--START BUTTON-->
         <button class='btn btn-primary' id='startButton'>Start</button>
         <!-- Question page -->
         <div id=timeRemaining></div>
@@ -42,6 +45,7 @@
         <div id=unanswered></div>
         <div id='startOverButton'></div>
     </div>
+    <!-- JAVASCRIPT INSERT-->
     <script type="text/javascript" src="javascript.js"></script>
 </body>
 
